add `grep ^CPU /var/run/dmesg.boot`

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,4 @@ jobs:
         - dmesg | grep CPU
         - dmesg | grep memory
         - grep -w 'memory' /var/run/dmesg.boot
+        - grep ^CPU /var/run/dmesg.boot
