--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ jobs:
         - dmesg | grep memory
         - grep -w 'memory' /var/run/dmesg.boot
         - grep ^CPU /var/run/dmesg.boot
+        - swapinfo -k
